--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8" />
 		<title>Rdio - Luke Chesser</title>
 
-		<link rel="stylesheet" href="css/reset.css"/>
+		<link rel="stylesheet" href="css/reset.css"/>2
 		<link rel="stylesheet" href="css/global.css"/>
 	</head>
+
 	<body>
 		<header>
 			<div class="wrapper">
