--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8" />
 		<title>Rdio - Luke Chesser</title>
@@ -30,8 +31,8 @@
 
 		<div class="container-fluid">
 			<div class="container">
-				<div class="row">
-					<aside class="container col-md-2">
+				<div class="row ">
+					<aside class="container col-md-2 d-none d-lg-block">
 						<br><br>
 						<h3>Browse</h3>
 						<nav class="browse">
@@ -43,7 +44,13 @@
 							</ul>
 						</nav>
 						<h3>Your music</h3>
-						<nav class="music">
+						<nav class="music d-none d-md-block">
+							<ul class="main">
+								<li><a class="collection" href="#">Collection</a></li>
+								<li><a class="history" href="#">History</a></li>
+							</ul>
+						</nav>
+						<nav class="music d-md-none" text-align="left">
 							<ul class="main">
 								<li><a class="collection" href="#">Collection</a></li>
 								<li><a class="history" href="#">History</a></li>
@@ -59,17 +66,22 @@
 								</aside>
 								<div class="name col-md-11">
 									<h1>Luke Chesser</h1>
-									<p>Montreal, Quebec, Canada <a href="https://www.facebook.com/" target="_blank"><img class="share" src="img/icon/fb.png" /></a><a href="https://twitter.com/" target="_blank"><img class="share" src="img/icon/twitter.png" /></a></p>
+									<p class="d-flex">Montreal, Quebec, Canada 
+										<a href="https://www.facebook.com/" target="_blank">
+										<img class="share d-none d-md-block" src="img/icon/fb.png" /></a>
+										<a  href="https://twitter.com/" target="_blank">
+										<img class="share d-none d-md-block"" src="img/icon/twitter.png" /></a>
+									</p>
 								</div>
 							</div>
 							<div class="stats-links row">
-								<section class="stats col-md-6">
+								<section class="stats col-6">
 									<span>2 Playlists</span>
 									<span>4 Reviews</span>
 									<span>6 Followers</span>
 									<span>13 Following</span>
 								</section>
-								<div class="links col-md-6">
+								<div class="links">
 									<div Align="end">
 										<a href="#">Collection</a>
 										<a href="#">History</a>
@@ -78,14 +90,15 @@
 							</div>
 						</header>
 						
-						<section id="albums">
-							<div class="row">
-								<h2 class="col-md-6">Top Album</h2>
-								<div class="col-md-6" Align="end">
-									<a class="station" href="#">Start Station</a>
-								</div>
+						<div class="d-flex">
+							<h2 class="col-6">Top Album</h2>
+							<div class="col-6" Align="end">
+								<a class="station" href="#">Start Station</a>
 							</div>
-							<article>
+						</div>
+
+						<section id="albums" class="d-flex flex-wrap">
+							<article class="col-sm-6 col-md-3 col-lg-2 px-2">
 								<figure>
 									<img src="img/album/album_01.png" />
 									<figcaption>Native (Deluxe)</figcaption>
@@ -93,7 +106,7 @@
 								<div class="artist">OneRepublic</div>
 								<div class="count">17 songs</div>
 							</article>
-							<article>
+							<article class="col-sm-6 col-md-3 col-lg-2 px-2">
 								<figure>
 									<img src="img/album/album_02.png" />
 									<figcaption>Wax Wings</figcaption>
@@ -101,7 +114,7 @@
 								<div class="artist">Joshua Radin</div>
 								<div class="count">11 songs</div>
 							</article>
-							<article>
+							<article class="col-sm-6 col-md-3 col-lg-2 px-2">
 								<figure>
 									<img src="img/album/album_03.png" />
 									<figcaption>Modern Vampires of th...</figcaption>
@@ -109,7 +122,7 @@
 								<div class="artist">Vampire Weekend</div>
 								<div class="count">12 songs</div>
 							</article>
-							<article>
+							<article class="col-sm-6 col-md-3 col-lg-2 px-2">
 								<figure>
 									<img src="img/album/album_04.png" />
 									<figcaption>Night Visions</figcaption>
@@ -117,7 +130,7 @@
 								<div class="artist">Imagine Dragons</div>
 								<div class="count">11 songs</div>
 							</article>
-							<article>
+							<article class="col-sm-6 col-md-3 col-lg-2 px-2">
 								<figure>
 									<img src="img/album/album_05.png" />
 									<figcaption>Trouble Will Find Me</figcaption>
@@ -125,7 +138,7 @@
 								<div class="artist">The National</div>
 								<div class="count">13 songs <span class="explicit">EXPLICIT</span></div>
 							</article>
-							<article>
+							<article class="col-sm-6 col-md-3 col-lg-2 px-2">
 								<figure>
 									<img src="img/album/album_06.png" />
 									<figcaption>Native (Deluxe)</figcaption>
@@ -133,7 +146,7 @@
 								<div class="artist">OneRepublic</div>
 								<div class="count">17 songs</div>
 							</article>
-							<article>
+							<article class="col-sm-6 col-md-3 col-lg-2 px-2">
 								<figure>
 									<img src="img/album/album_07.png" />
 									<figcaption>Wax Wings</figcaption>
@@ -141,7 +154,7 @@
 								<div class="artist">Joshua Radin</div>
 								<div class="count">11 songs</div>
 							</article>
-							<article>
+							<article class="col-sm-6 col-md-3 col-lg-2 px-2">
 								<figure>
 									<img src="img/album/album_08.png" />
 									<figcaption>Modern Vampires of th...</figcaption>
@@ -149,7 +162,7 @@
 								<div class="artist">Vampire Weekend</div>
 								<div class="count">12 songs</div>
 							</article>
-							<article>
+							<article class="col-sm-6 col-md-3 col-lg-2 px-2">
 								<figure>
 									<img src="img/album/album_09.png" />
 									<figcaption>Night Visions</figcaption>
@@ -157,7 +170,7 @@
 								<div class="artist">Imagine Dragons</div>
 								<div class="count">11 songs <span class="explicit">EXPLICIT</span></div>
 							</article>
-							<article>
+							<article class="col-sm-6 col-md-3 col-lg-2 px-2"> 
 								<figure>
 									<img src="img/album/album_10.png" />
 									<figcaption>Trouble Will Find Me</figcaption>
