--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8" />
 		<title>Rdio - Luke Chesser</title>
 		<link rel="stylesheet" href="css/bootstrap.css"/>
@@ -17,7 +16,7 @@
 						<img class="pull-left" src="img/logo.png" />
 					</div>
 
-					<form class="col-md-2" method="POST" action="index.html">
+					<form class="col-md-2 d-none d-md-block" method="POST" action="index.html">
 						<input type="search" required class="search">
 						<input type="submit" name="submit" value="Rechercher" class="submit">
 					</form>
